--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       <div class="footer-subscribe">
         <p class="footer-text">Подпишитесь на рассылку</p>
         <div class="subscribe-wrap">
-          <input type="text" class="input-subcribe" placeholder="E-mail">
+          <input type="text" name="subscribe" class="input-subcribe" placeholder="E-mail">
           <button type="submit" class="btn-subscribe">Подписаться
             <svg width="24" height="24">
               <use href="./images/icons.svg#icon-send"></use>
