--- a/index.html
+++ b/index.html
@@ -481,12 +481,11 @@
         <div>
           <input type="checkbox" id="policy-check" class="modal-checkbox visually-hidden" name="modal-checkbox" required>
           <label for="policy-check" class="modal-policy modal-label">
-            <span >
+            <span>
               <svg width="16" height="15" class="modal-check-icon">
                 <use href="./images/icons.svg#icon-check">
               </svg>
-            </span>
-               Соглашаюсь с рассылкой и принимаю <a href="#" class="policy-link">Условия договора</a></label>
+            </span> Соглашаюсь с рассылкой и принимаю <a href="#" class="policy-link">Условия договора</a></label>
         </div>
         <div class="btn-subm-wrap">
            <button type="submit" class="modal-btn-subm">Отправить</button>
