fixes small mistakes

--- a/portfolio.html
+++ b/portfolio.html
@@ -200,7 +200,7 @@
         </address>
       </div>
 
-      <div class="footer-right">
+      <div class="footer-center">
         <p class="footer-text">Присоединяйтесь</p>
       
         <ul class="footer-socials-list list">
@@ -237,7 +237,18 @@
           </li>
         </ul>
       </div>
-
+      
+      <div class="footer-subscribe">
+        <p class="footer-text">Подпишитесь на рассылку</p>
+        <div class="subscribe-wrap">
+          <input type="text" name="subscribe" class="input-subcribe" placeholder="E-mail">
+          <button type="submit" class="btn-subscribe">Подписаться
+            <svg width="24" height="24">
+              <use href="./images/icons.svg#icon-send"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
 
     </div>
   </footer>
