--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <div class="form-field">
           <label for="user-name" class="modal-label">Имя</label>
           <div class="modal-input-wrap">
-            <input type="name" name="user-name" class="modal-input" id="user-name" required>
+            <input type="name" name="user-name" class="modal-input" id="user-name" autofocus required>
             <svg class="input-icons" width="18" height="18">
               <use href="./images/icons.svg#icon-person"></use>
             </svg>
@@ -484,7 +484,8 @@
               <svg width="16" height="15" class="modal-check-icon">
                 <use href="./images/icons.svg#icon-check">
               </svg>
-            </span> Соглашаюсь с рассылкой и принимаю <a href="#" class="policy-link">Условия договора</a></label>
+            </span> Соглашаюсь с рассылкой и принимаю <a href="#" class="policy-link">Условия договора</a>
+          </label>
         </div>
         <div class="btn-subm-wrap">
            <button type="submit" class="modal-btn-subm">Отправить</button>
